kubernetes-old/monitoring/alertmanager/ingress.yaml
---
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: alertmanager
  namespace: monitoring
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: basic-auth-alertmanager
    nginx.ingress.kubernetes.io/auth-realm: "Authentication Required - Alertmanager Dashboard"
spec:
  tls:
  - hosts:
    - alertmanager.thuault.com
    secretName: alertmanager-tls
  rules:
  - host: alertmanager.thuault.com
    http:
      paths:
      - path: /
        backend:
          serviceName: alertmanager
          servicePort: 9093
